fix text controls wrapping

--- a/components/content/content-editor/controls/text/text-controls.styl
+++ b/components/content/content-editor/controls/text/text-controls.styl
@@ -2,6 +2,9 @@
 	position: absolute
 	z-index: 10
 
+	& > div
+		display: flex
+
 .fade-enter-active, .fade-leave-active
 	transition: opacity 0.05s
 
